--- a/scss/_features.scss
+++ b/scss/_features.scss
@@ -14,8 +14,8 @@
   }
 
   &__title {
-    padding-top: 166px;
-    letter-spacing: 0.06em;
+    padding-top: 145px;
+    letter-spacing: 0.03em;
 
     @include media-screen-small {
       padding-top: 100px;
@@ -24,7 +24,7 @@
 
   &__paragraph {
     font-size: 18px;
-    padding: 54px 293px;
+    padding: 52px 300px;
     line-height: 26px;
 
     @include media-screen-tablet {
@@ -135,7 +135,7 @@
       display: flex;
       justify-content: space-between;
       flex-direction: column;
-      margin-left: 30px;
+      margin-left: 10px;
 
       @include media-screen-small {
         margin-left: 0px;
@@ -146,7 +146,7 @@
       font-size: 24px;
       font-weight: 400;
       line-height: 31.2px;
-      padding-top: 50px;
+      padding-top: 62px;
 
       @include media-screen-small {
         padding-top: 20px;
@@ -158,7 +158,7 @@
       font-weight: 400;
       line-height: 25.6px;
       letter-spacing: 0.03em;
-      padding-top: 20px;
+      padding-top: 30px;
       max-width: 220px;
       max-height: 160px;
       overflow: hidden;
