--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 .header {
-  margin-top: 48px;
+  margin-top: 62px;
 
   & .container {
     display: flex;
