--- a/scss/_top.scss
+++ b/scss/_top.scss
@@ -2,7 +2,7 @@
 @import "mixins";
 
 .top {
-  padding-top: 136px;
+  padding-top: 143px;
 
   @include media-screen-xs {
     padding-top: 60px;
@@ -35,14 +35,14 @@
 
     &_paragraph {
       max-width: 380px;
-      padding: 56px 0;
+      padding: 56px 0 72px;
       font-size: 18px;
-      line-height: 28px;
+      line-height: 28.8px;
       letter-spacing: 0.01em;
     }
 
     &_button-container {
-      padding-bottom: 120px;
+      padding-bottom: 140px;
     }
 
     &_button {
@@ -63,8 +63,8 @@
     flex: 40%;
     position: absolute;
     bottom: 20px;
-    left: 30%;
-    margin-right: -10%;
+    left: 32%;
+    margin-right: -11%;
     z-index: -10;
 
     @include media-screen-tablet {
